--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,10 +1,13 @@
+@(nonce:String)
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <title>retsplay</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
-        @*<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">*@
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <meta property="csp-nonce" content="@{nonce}" />
     </head>
     <body>
         <div id="app"></div>
