--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,3 +1,22 @@
-@import "../bootstrap/bootstrap";
+//@import "../bootstrap/bootstrap";
 
+body {
+  font-family: Arial, sans-serif;
+}
 
+/* Crap, can be delete  */
+.fading {
+  animation:fadeIn 6.5s ease;
+}
+@keyframes fadeIn {
+  0% {
+    opacity:0
+  }
+  50% {
+    opacity:0
+  }
+  100% {
+    opacity:1;
+  }
+}
+/* ------------------- */
